// Copyright (c) The Libra Core Contributors
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package state_synchronizer;

message StateSynchronizerMsg { bytes message = 1; }
